[build-system]
requires = ["flit_core>=3.2", "flit_scm", "wheel"]
build-backend = "flit_scm:buildapi"

[project]
name = "django-crontask"
authors = [
  { name = "Rust Saiargaliev", email = "fly.amureki@gmail.com" },
  { name = "Johannes Maron", email = "johannes@maron.family" },
  { name = "Mostafa Mohamed", email = "mostafa.anm91@gmail.com" },
  { name = "Jacqueline Kraus", email = "jacquelinekraus1992@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["Django", "cron", "tasks", "scheduler"]
dynamic = ["version", "description"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Environment :: Web Environment",
  "License :: OSI Approved :: BSD License",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Communications :: Email",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Software Development",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Framework :: Django",
  "Framework :: Django :: 6.0",
]
requires-python = ">=3.12"
dependencies = ["apscheduler", "django>=6.0"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-django",
]
sentry = ["sentry-sdk"]
redis = ["redis"]

[project.urls]
Project-URL = "https://github.com/codingjoe/django-crontask"
Changelog = "https://github.com/codingjoe/django-crontask/releases"

[tool.flit.module]
name = "crontask"

[tool.setuptools_scm]
write_to = "crontask/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --tb=short -rxs"
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "tests.testapp.settings"

[tool.coverage.run]
source = ["crontask"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
src = ["crontask", "tests"]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "S", # flake8-bandit
    "D", # pydocstyle
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "C", # flake8-comprehensions
]

ignore = ["B904", "D1", "E501", "S101"]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
force-wrap-aliases = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"
